...
            <objects>
                <viewController id="BYZ-38-t0r" customClass="CurrencyConversionScene" customModule="PPCurrencyConversion" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Enter Amount" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="vC6-U3-VcG" customClass="TextInputWidget" customModule="PPCurrencyConversion" cust
                                <rect key="frame" x="20" y="64" width="374" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="M3b-N5-JFS"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="decimalPad" returnKeyType="done"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Select Currency" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="8Pj-L6-ztO" customClass="SelectorInputWidget" customModule="PPCurrencyConversio
                                <rect key="frame" x="20" y="134" width="112" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="Cs9-gd-pA7"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="decimalPad" returnKeyType="done"/>
...
